fix bookshelf spacing

--- a/styles.css
+++ b/styles.css
@@ -70,60 +70,46 @@ a {
 
 /* bookshelf */
 .bookshelf {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   gap: 2em;
-   margin: 2em auto;
-   flex-wrap: nowrap;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.book-main-column {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	max-width: 200px;
 }
 .book {
-   width: 75px;
-   cursor: pointer;
-   opacity: 0.6;
-   border-radius: 0.5em; 
+	width: 75px;
+	cursor: pointer;
+	border-radius: 0.5em;
 }
 .book.main {
-   width: 150px;
-   opacity: 1;
-   cursor: default;
-   border-radius: 1em;
-}
-.book-wrapper {
-  text-align: center;
-}
-.book-wrapper img {
-  margin-top: 1em;
-  margin-bottom: 2em;
+	width: 150px;
+	border-radius: 1em;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 .book-title {
-  font-weight: bold;
-  font-size: 1.5em;
+	font-weight: bold;
+	font-size: 1.5em;
+	width: 50vw;
 }
 .book-author {
-  font-size: 1.2em;
-  color: #555;
+	font-size: 1.2em;
+	color: #555;
+	width: 50vw;
 }
 .book-description {
-  margin-top: 0.5em;
-  font-size: 1.1em;
-  color: #444;
-  max-width: 200px;
-  margin-left: auto;
-  margin-right: auto;
+	font-size: 1.1em;
+	color: #444;
+	width: 300px;
 }
 @media (pointer: coarse) {
-   .bookshelf {
-      gap: 6em;
-   }
-   .book {
-      width: 45px;
-      border-radius: 0.1em; 
-   }
-   .book.main {
-      width: 125px;
-      border-radius: .25em;
-   }
+   
 }
 
 /* Header styling */
@@ -196,8 +182,7 @@ footer {
    text-align: right;
    margin-right: 1em;
 }
-.form-row input,
-.form-row textarea {
+.form-row input, .form-row textarea {
    flex: 2;
    padding: 0.5em;
    border-radius: 0.5em;
@@ -210,8 +195,7 @@ footer {
    font-family: monospace;
    font-size: 1em;
 }
-.contact-form input,
-.contact-form textarea {
+.contact-form input, .contact-form textarea {
    background-color: #f0f0f0;
    width: 100%;
    max-width: 500px;
@@ -220,24 +204,21 @@ footer {
    margin-top: 0.5em;
 }
 
-/* desktop styling */
-@media (pointer: fine) {
-   .content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-   }
+.content {
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   text-align: center;
+}
 
-   .poem {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: left;
-   }
+.poem {
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   text-align: left;
 }
 
 /* mobile styling */
@@ -293,6 +274,22 @@ footer {
    .status-message {
       font-size: 2.6em;
       margin: 2em 1em 4em 1em;
+   }
+   .book-main-column {
+      max-width: 550px;
+   }
+   .book.main {
+      width: 125px;
+      border-radius: .25em;
+      margin-top: 7em;
+      margin-bottom: 7em;
+   }
+   .book {
+      width: 45px;
+      border-radius: 0.1em; 
+   }
+   .book-description {
+	   width: 70vw;
    }
 
    .content {
